Se agrega nueva categoria llamada conditionalNonNullInColumnsspecificRules y se organiza las cabeceras con el numeral de las pruebas logicas